--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "Other"
   ],
   "activationEvents": [
-    "onView:postgresView"
+    "onStartupFinished"
   ],
   "main": "./dist/extension.js",
   "contributes": {
