feat(connection): Implement webview form for adding new connections
This commit introduces the initial implementation for adding a new PostgreSQL connection via a webview form.

The previous placeholder "Show Tree View" command has been replaced with the "Add Connection" command. When triggered, this command now opens a webview panel containing a form with fields for Host, Port, User, Password, and Database.

Key changes include:
- Renaming the command from `postgres.showTreeView` to `postgres.addConnection`.
- Updating the view title menu in `package.json` to use the new command and display an "add" icon.
- Creating the HTML structure and basic styling for the connection form within the webview.
- Adding the repository URL to `package.json` and a new LICENSE file.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "engines": {
     "vscode": "^1.105.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/septemhill/vscodepg"
+  },
   "categories": [
     "Other"
   ],
@@ -37,15 +41,17 @@
         "title": "Hello World"
       },
       {
-        "command": "postgres.showTreeView",
-        "title": "Show Tree View"
+        "command": "postgres.addConnection",
+        "title": "Add Connection"
       }
     ],
     "menus": {
       "view/title": [
         {
-          "command": "postgres.showTreeView",
-          "when": "view == postgresView"
+          "command": "postgres.addConnection",
+          "when": "view == postgresView",
+          "group": "navigation",
+          "icon": "$(add)"
         }
       ]
     }
