feat(db): add PostgreSQL client dependency
Adds the `pg` package and its corresponding type definitions (`@types/pg`) to enable connectivity with PostgreSQL databases.

This change also includes updates to development dependencies:
- Downgrades ESLint and related TypeScript plugins to resolve compatibility issues.
- Upgrades `@types/node` to a more recent version.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
 		"lib": [
 			"ES2022"
 		],
+		"typeRoots": ["node_modules/@types"],
 		"sourceMap": true,
 		"rootDir": "src",
 		"strict": true,   /* enable all strict type-checking options */
