feat(connections): Add inline actions for connect, edit, and delete
This commit introduces context menu actions directly on connection items in the PostgreSQL view, improving user workflow and connection management.

- Adds "Connect", "Edit", and "Delete" commands with corresponding icons (plug, edit, trash) that appear inline on hover in the connections tree view.
- Implements the underlying command registration and stubs for these new actions.
- Adds validation to the "Add Connection" form to prevent creating connections with duplicate aliases, providing clear error feedback to the user.
- Sets a `contextValue` on tree items to enable the conditional display of these new actions.

--- a/package.json
+++ b/package.json
@@ -43,6 +43,21 @@
       {
         "command": "postgres.addConnection",
         "title": "Add Connection"
+      },
+      {
+        "command": "postgres.connect",
+        "title": "Connect to Database",
+        "icon": "$(plug)"
+      },
+      {
+        "command": "postgres.editConnection",
+        "title": "Edit Connection",
+        "icon": "$(edit)"
+      },
+      {
+        "command": "postgres.deleteConnection",
+        "title": "Delete Connection",
+        "icon": "$(trash)"
       }
     ],
     "menus": {
@@ -52,6 +67,26 @@
           "when": "view == postgresView",
           "group": "navigation",
           "icon": "$(add)"
+        }
+      ],
+      "view/item/context": [
+        {
+          "command": "postgres.connect",
+          "when": "view == postgresView && viewItem == connectionItem",
+          "group": "inline",
+          "icon": "$(plug)"
+        },
+        {
+          "command": "postgres.editConnection",
+          "when": "view == postgresView && viewItem == connectionItem",
+          "group": "inline",
+          "icon": "$(edit)"
+        },
+        {
+          "command": "postgres.deleteConnection",
+          "when": "view == postgresView && viewItem == connectionItem",
+          "group": "inline",
+          "icon": "$(trash)"
         }
       ]
     }
