feat: Add icon to Add Connection command and refactor webview
This commit introduces two main changes:

1.  An `$(add)` icon has been added to the "Add Connection" command in the connections view. This provides a clearer visual cue for the action.

2.  The implementation for the SQL query webview panel, including its HTML, CSS, and client-side script, has been removed from the main `extension.ts` file. This is the first step in refactoring the webview logic into its own dedicated module to improve code organization and maintainability.

--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
       },
       {
         "command": "postgres.addConnection",
-        "title": "Add Connection"
+        "title": "Add Connection",
+        "icon": "$(add)"
       },
       {
         "command": "postgres.connect",
