--- a/package.json
+++ b/package.json
@@ -94,11 +94,11 @@
   },
   "scripts": {
     "vscode:prepublish": "pnpm run package",
-    "compile": "pnpm run check-types && pnpm run lint && node esbuild.js",
+    "compile": "node esbuild.js",
     "watch": "npm-run-all -p watch:*",
     "watch:esbuild": "node esbuild.js --watch",
     "watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
-    "package": "pnpm run check-types && pnpm run lint && node esbuild.js --production",
+    "package": "node esbuild.js --production",
     "compile-tests": "tsc -p . --outDir out",
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "pnpm run compile-tests && pnpm run compile && pnpm run lint",
@@ -109,18 +109,27 @@
   "devDependencies": {
     "@types/mocha": "^10.0.10",
     "@types/node": "^24.10.0",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "@types/vscode": "^1.105.0",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@types/vscode-webview": "^1.57.5",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.5.2",
-    "esbuild": "^0.25.3",
-    "eslint": "^8.0.0",
+    "esbuild": "^0.25.12",
+    "eslint": "^8.57.1",
     "npm-run-all": "^4.1.5",
-    "typescript": "5.8.x"
+    "typescript": "5.8.3"
   },
   "dependencies": {
+    "@codemirror/lang-sql": "^6.10.0",
+    "@codemirror/theme-one-dark": "^6.1.3",
     "@types/pg": "^8.15.6",
-    "pg": "^8.16.3"
+    "@uiw/codemirror-theme-vscode": "^4.25.3",
+    "@uiw/react-codemirror": "^4.25.3",
+    "pg": "^8.16.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
