feat(database): add support for redis connections
This commit introduces the capability to connect to Redis databases.

The connection logic has been updated to differentiate between database types (PostgreSQL and Redis) based on a `dbType` property in the connection configuration. The `redis` npm package is added as a dependency to handle the connection and communication with the Redis server.

Changes include:
- Adding `redis` and `@types/redis` to `package.json`.
- Modifying the `connectToDatabase` function to include a connection path for Redis.
- Implementing connection, success, and error handling for Redis connections.

--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "@types/node": "^24.10.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "@types/redis": "^4.0.10",
     "@types/vscode": "^1.105.0",
     "@types/vscode-webview": "^1.57.5",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -130,6 +131,7 @@
     "@uiw/react-codemirror": "^4.25.3",
     "pg": "^8.16.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "redis": "^5.9.0"
   }
 }
